<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Root My Nothing</string>
    <string name="status_idle">Idle</string>
    <string name="status_running">Running</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="action_run">Run</string>
    <string name="action_running">Running…</string>
    <string name="action_copy">Copy</string>
    <string name="copied">Log copied</string>
    <string name="log_title">Log</string>
    <string name="device_label">Device</string>
    <string name="kernel_label">kernel</string>
    <string name="kernel_supported">Supported</string>
    <string name="kernel_unsupported">Not supported</string>
    <string name="support_label">Support</string>
</resources>
